--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,6 +72,10 @@ $boxShadow-introImg: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25);
 /*  */
 
 /* general styles */
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: $clr-dark;
   color: $clr-light;
@@ -133,6 +137,113 @@ h2 {
 h3 {
   font-size: $fs-h3;
   font-weight: $fw-reg;
+}
+
+/* header  */
+header {
+  display: flex;
+  justify-content: space-between;
+  padding: 1em;
+}
+
+.logo {
+  max-width: 200px;
+}
+
+.nav {
+  position: fixed;
+  background: $clr-light;
+  background-color: $clr-dark;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+
+  transform: translatex(100%);
+  transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
+}
+
+.nav__list {
+  list-style: none;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  margin: 0;
+  padding: 0;
+}
+
+.nav__link {
+  color: inherit;
+  font-size: $fs-h2;
+  text-decoration: none;
+}
+
+.nav__link:hover {
+  color: $clr-hoversAccent;
+}
+
+.nav-toggle {
+  padding: 0.5em;
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  position: absolute;
+  right: 1em;
+  top: 1em;
+  z-index: 1000;
+}
+
+.nav-open .nav {
+  transform: translateX(0);
+}
+
+.nav-open .nav-toggle {
+  position: fixed;
+}
+
+.nav-open .hamburger {
+  transform: rotate(0.625turn);
+}
+
+.nav-open .hamburger::before {
+  transform: rotate(90deg) translateX(-6px);
+}
+
+.nav-open .hamburger::after {
+  opacity: 0;
+}
+
+.hamburger {
+  display: block;
+  position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+  background: $clr-hoversAccent;
+  width: 2em;
+  height: 3px;
+  border-radius: 1em;
+  transition: transform 250ms, ease-in-out;
+}
+
+.hamburger::before,
+.hamburger::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
+.hamburger::before {
+  top: 6px;
+}
+.hamburger::after {
+  bottom: 6px;
 }
 
 .section__title {
@@ -252,6 +363,12 @@ h3 {
 }
 .section__title--contact::after {
   @include horizontalRule();
+}
+
+@media (min-width: 320px) {
+  .intro__img {
+    max-width: 200px;
+  }
 }
 
 @media (min-width: 600px) {
